<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="5dp"
    android:backgroundTint="@color/DarkGrey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<RelativeLayout
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/ServiceNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"/>


</RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_email"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginTextt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:clickable="false"
                android:enabled="false"
                android:textColor="@color/white"
                android:text="@string/_1111"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_light"
                android:textIsSelectable="true"
                />


        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordTextt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:clickable="false"
                android:textSize="15sp"
                android:enabled="false"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_light"
                android:textIsSelectable="true"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>